[package]
name = "eng-pwasm-abi"
version = "0.2.2"
authors = ["NikVolf <nikvolf@gmail.com>", "Alexey Frolov <alexey@parity.io>", "Moria <moria@enigma.co>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/enigmampc/pwasm-abi"
homepage = "https://github.com/enigmampc/pwasm-abi"
description = "Rust WebAssembly Contracts Abi"
keywords = ["wasm", "webassembly", "blockchain", "abi", "enigma"]
categories = ["no-std", "embedded"]
exclude = [ "tests/*", "derive/*" ]

[profile.release]
panic = "abort"

[dependencies]
parity-hash = { version = "1.2", default-features = false }
uint = { version = "0.3", default-features = false }
byteorder = { version = "1.2", default-features = false }

[dev-dependencies]
hex-literal = "0.1"

[features]
default = []
std = ["uint/std", "byteorder/std"]
strict = []
