[package]
name = "eng-pwasm-abi"
version = "0.3.2"
authors = ["NikVolf <nikvolf@gmail.com>", "Alexey Frolov <alexey@parity.io>", "Moria <moria@enigma.co>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/enigmampc/pwasm-abi"
homepage = "https://github.com/enigmampc/pwasm-abi"
description = "Rust WebAssembly Contracts Abi"
keywords = ["wasm", "webassembly", "blockchain", "abi", "enigma"]
categories = ["no-std", "embedded"]
exclude = [ "tests/*", "derive/*" ]

[profile.release]
panic = "abort"

[dependencies]
uint = { version = "0.6", default-features = false }
byteorder = { version = "1.2", default-features = false }
fixed-hash = { version = "0.3.0", default-features = false }
serde = { version = "1.0.89", optional = true, default-features = false, features = ["derive"] }
rustc-hex = { version = "2.0.1", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.1"

[features]
default = ["serialize", "hex"]
std = ["uint/std", "byteorder/std"]
hex = ["rustc-hex"]
strict = []
serialize = ["serde"]